--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/gettomanage
 server.servlet.context-path=/api/v1.0
 spring.data.mongodb.auto-index-creation=true
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+
+clerk.issuer=https://humane-roughy-28.clerk.accounts.dev
+clerk.jwks-url=https://humane-roughy-28.clerk.accounts.dev/.well-known/jwks.json
